fix: bug in Calendar wrongfully not setting visible month's days as being part of the current month. refactor: renamed stuff in MyCalendar

--- a/src/frontend/acedemic-challenge/app/routes/calendar/components/MyCalendar/myCalendar.module.css
+++ b/src/frontend/acedemic-challenge/app/routes/calendar/components/MyCalendar/myCalendar.module.css
@@ -56,9 +56,13 @@
 .calendarGridContainer {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-auto-rows: 1fr;
+    grid-template-rows: repeat(7, 1fr);
     grid-gap: 0.35rem 0.25rem;
 }
+
+/*.calendarGridContainer.switched {
+    grid-auto-flow: column;
+}*/
 
 .calendarDayContainer {
     display: flex;
